[package]
name = "nginx-acme"
version = "0.1.1"
edition = "2021"
license = "Apache-2.0"
publish = false
rust-version = "1.81.0"

[lib]
crate-type = ["cdylib"]

[dependencies]
anyhow = "1.0.98"
base64 = "0.22.1"
bytes = "1.10.1"
constcat = "0.6.1"
futures-channel = "0.3.31"
http = "1.3.1"
http-body = "1.0.1"
http-body-util = "0.1.3"
http-serde = "2.1.1"
hyper = { version = "1.6.0", features = ["client", "http1"] }
libc = "0.2.174"
openssl = { version = "0.10.73", features = ["bindgen"] }
openssl-foreign-types = { package = "foreign-types", version = "0.3" }
openssl-sys = { version = "0.9.109", features = ["bindgen"] }
scopeguard = "1"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.142"
siphasher = { version = "1.0.1", default-features = false }
thiserror = { version = "2.0.12", default-features = false }
zeroize = "1.8.1"

[dependencies.nginx-sys]
git = "https://github.com/nginx/ngx-rust"
rev = "ac60b788cc1b9e9d5e2e92058b54494dcecb1109"

[dependencies.ngx]
git = "https://github.com/nginx/ngx-rust"
rev = "ac60b788cc1b9e9d5e2e92058b54494dcecb1109"
default-features = false
features = ["async", "serde", "std"]

[features]
default  = ["export-modules"]
# Generate `ngx_modules` table with module exports
# The exports table is required for building loadable modules with --crate-type cdylib
# outside of the NGINX buildsystem. However, cargo currently does not detect
# this configuration automatically.
export-modules = []

[profile.release]
codegen-units = 1
lto = true
